--- a/resume.html
+++ b/resume.html
@@ -23,16 +23,16 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="index_2027_files/libs/clipboard/clipboard.min.js"></script>
-<script src="index_2027_files/libs/quarto-html/quarto.js"></script>
-<script src="index_2027_files/libs/quarto-html/popper.min.js"></script>
-<script src="index_2027_files/libs/quarto-html/tippy.umd.min.js"></script>
-<script src="index_2027_files/libs/quarto-html/anchor.min.js"></script>
-<link href="index_2027_files/libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="index_2027_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="index_2027_files/libs/bootstrap/bootstrap.min.js"></script>
-<link href="index_2027_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="index_2027_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script src="resume_files/libs/clipboard/clipboard.min.js"></script>
+<script src="resume_files/libs/quarto-html/quarto.js"></script>
+<script src="resume_files/libs/quarto-html/popper.min.js"></script>
+<script src="resume_files/libs/quarto-html/tippy.umd.min.js"></script>
+<script src="resume_files/libs/quarto-html/anchor.min.js"></script>
+<link href="resume_files/libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="resume_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="resume_files/libs/bootstrap/bootstrap.min.js"></script>
+<link href="resume_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="resume_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
 
 
 </head>
@@ -45,7 +45,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Brigham Young’s Resume</h1>
+<h1 class="title">Sebastian Dunn’s Resume</h1>
 </div>
 
 
@@ -60,70 +60,31 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<section id="brigham-young" class="level1">
-<h1>Brigham Young</h1>
-<p>The second prophet of The Church of Jesus Christ of Latter-day Saints.</p>
+<section id="sebastian-dunn" class="level1">
+<h1>Sebastian Dunn</h1>
+<p>Software Developer | Computer Science Major | Technical Consultant</p>
 <div id="webaddress">
-<p><a href="datascience@byui.edu">datascience@byui.edu</a> | <a href="https://byuidatascience.github.io/development.html">Data Science Program</a></p>
+<p><a href="sebastiancdunn@gmail.com">sebastiancdunn@gmail.com</a> | <a href="github.com/axolmain">Github Portfolio</a></p>
 </div>
 <!-- https://www.monique.tech/the-art-of-markdown -->
 <section id="education" class="level2">
 <h2 class="anchored" data-anchor-id="education">Education</h2>
-<p><code>2025-2027</code> <strong>LDS Business College</strong>, Salt Lake City, UT</p>
+<p><code>2025-2027</code> <strong>Bachelor’s Degree in Computer Science</strong> <em>Brigham Young University - Idaho, Rexburg, ID</em></p>
 <ul>
-<li>Full academic scholarship with 4.0 GPA</li>
+<li>Minor: Data Science</li>
+<li>GPA: 3.8</li>
 </ul>
-<p><code>Expected 2029</code> <strong>Brigham Young University - Idaho</strong>, Rexburg, ID</p>
-<ul>
-<li>4.0 Major GPA</li>
-</ul>
+<p><code>Expected April 2024</code></p>
 </section>
 <section id="related-experience" class="level2">
 <h2 class="anchored" data-anchor-id="related-experience">Related Experience</h2>
-<section id="internships" class="level3">
-<h3 class="anchored" data-anchor-id="internships">Internships</h3>
-<p><code>January 2028 - June 2028</code> <strong>Pacific Northwest National Lab</strong>, Richland, WA</p>
-<ul>
-<li>Worked on novel methods for soil sampling to reduce laboratory measurements</li>
-<li>Used R and Visual Sample Plan to establish new sampling algorithms</li>
-<li>Published a journal article in Environmental Quality.</li>
-</ul>
-</section>
-<section id="data-science-lead" class="level3">
-<h3 class="anchored" data-anchor-id="data-science-lead">Data Science Lead</h3>
-<p><code>April 2027 - June 2027</code> <strong>Westmark Credit Union</strong>, Consultant</p>
-<ul>
-<li>Developed a predicted model to support Westmark in custumer conversion from dealer loans.</li>
-<li>Used R and Python to build a machine learning model using CatBoost in Python and the Tidyverse for data visualization and munging.</li>
-<li>Improved previous model development to over 85% balanced accuracy. Expect model to be implemented in Westmark business practices.</li>
-</ul>
-<p><code>September 2027 - April 2028</code> <strong>Good2Go</strong>, Consultant</p>
-<ul>
-<li>Built product ordering and supply predictive algorithms for chips and beverages categories</li>
-<li>Established standardized SQL calls and connections for PowerBI dashboards</li>
-<li>Found over $35k in waste and saved over 200 annual hours of store quality control work</li>
-</ul>
-</section>
-<section id="data-science-consulting-team" class="level3">
-<h3 class="anchored" data-anchor-id="data-science-consulting-team">Data Science Consulting Team</h3>
-<p><code>January 2027 - April 2027</code> <strong>Imagine Learning</strong></p>
-<ul>
-<li>Build web scraping tool to find and format school district technology data.</li>
-<li>Used R and the Rvest package to parse and format web data.</li>
-<li>Saved 30 hours a month with the automated scripts.</li>
-</ul>
-<p><code>April 2027 - July 2027</code> <strong>Pinnacle Management Group</strong>,</p>
-<ul>
-<li>Proof of concept development of dashboards using client’s corporate data.</li>
-<li>Built and documented differences of PowerBI, Google Dashoards, and Tableau.</li>
-<li>Saved client $10k in database and dashboard server fees and validated future dashboard processes.</li>
-</ul>
-</section>
+<p><code>August 2020 - Present</code> <strong>Dunn Consulting</strong> <em>Freelance contracting</em> - Created a full stack python web application to increase the efficiency of scraping and analyzing Real Estate information for lead generation by over 300% - Created 3 Spigot plugins in Java for Minecraft servers to minimize server stress - Working to find solutions with companies/individuals to automate and improve tasks with technology</p>
+<p><code>May 2023 - August 2023</code> <strong>Incoming - Software Engineering Intern</strong> <em>Cadwell Industries Inc.</em> - Using C# to produce back end software - WPF design and development</p>
 </section>
 <section id="service-and-work-history" class="level2">
 <h2 class="anchored" data-anchor-id="service-and-work-history">Service and Work History</h2>
-<p><code>2025-2027</code> <strong>Math Tutor</strong>, LDSBC</p>
-<p><code>2023-2025</code> <strong>Service Missionary</strong>, South Africa</p>
+<p><code>January 2023 - April 2023</code> <strong>Computer Science Volunteer Tutor</strong> - Tutored over 10 students in introductory computer science courses - Helped students with assignments and projects - Specialized in Python and MySQL</p>
+<p><code>August 2022 - March 2023</code> <strong>Prime Student Campus Manager</strong> <em>Riddle and Bloom | Amazon Prime Student</em> - Launched four events exhibiting Amazon Prime Student’s diverse offerings, fostering improved campus growth - Generated weekly reports that effectively communicated the success and popularity of Amazon Prime Student among the student population - Elevated skillset in utilizing TikTok, marketing, event planning, and product communication, resulting in enhanced productivity and performance</p>
 <!-- ### Footer
 
 Last updated: May 2013 -->
